fix for project iframes on small screens

--- a/src/assets/_scss/pages/_project.scss
+++ b/src/assets/_scss/pages/_project.scss
@@ -1,3 +1,19 @@
+.project {
+  iframe {
+    width: 100%;
+    height: 200px;
+    @include media-breakpoint-up(sm) {
+      height: 250px;
+    }
+    @include media-breakpoint-up(md) {
+      height: 300px;
+    }
+    @include media-breakpoint-up(lg) {
+      height: 600px;
+    }
+  }
+}
+
 .project-tags {
   font-family: $font-family-secondary;
   text-transform: uppercase;
